--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <div class="title">
-    <form method="post">
+    <form method="get" action="/editor">
     	<input type="text" name="url"></input>
     	<input type="submit" value="Submit"/>
     </form>
