--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,13 +13,16 @@
 
     <!-- styles -->
     <link href="stylesheets/style.css" rel="stylesheet">
-
+    <script type="text/javascript" src="js/libs/jquery.js"></script>
+    <script type="text/javascript" src="js/libs/underscore.js"></script>
   </head>
   <body>
     
     <% include includes/header %>
     <%- body %>
-    <% include includes/footer %>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
+  
+
 </html>
 
